// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UsersControlpanelGroups > renders a UsersControlpanelGroups component 1`] = `
<tr
  className=""
>
  <td
    className=""
  >
    Administrators
  </td>
  <td
    className=""
  >
    <div
      className="ui fitted checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <input
        checked={false}
        className="hidden"
        disabled={false}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value="Administrators.Member"
      />
      <label />
    </div>
  </td>
  <td
    className=""
  >
    <div
      className="ui fitted checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <input
        checked={false}
        className="hidden"
        disabled={false}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value="Administrators.Reader"
      />
      <label />
    </div>
  </td>
  <td
    className=""
  >
    <div
      className="ui checked fitted checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <input
        checked={true}
        className="hidden"
        disabled={false}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value="Administrators.Manager"
      />
      <label />
    </div>
  </td>
  <td
    className="right aligned"
  >
    <div
      aria-expanded={false}
      className="ui dropdown"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <i
        aria-hidden="true"
        className="ellipsis horizontal icon"
        onClick={[Function]}
      />
      <div
        className="menu transition left"
      >
        <div
          className="item"
          onClick={[Function]}
          role="option"
        >
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              {
                "__html": "<g fill-rule="evenodd"><path d="M27,30 C27,30.552 26.551,31 26,31 L12,31 C11.449,31 11,30.552 11,30 L11,9 L27,9 L27,30 Z M19,5 C20.103,5 21,5.897 21,7 L17,7 C17,5.897 17.897,5 19,5 L19,5 Z M31,7 L23,7 C23,4.794 21.206,3 19,3 C16.794,3 15,4.794 15,7 L7,7 L7,9 L9,9 L9,30 C9,31.654 10.346,33 12,33 L26,33 C27.654,33 29,31.654 29,30 L29,9 L31,9 L31,7 Z"/><polygon points="15 28 17 28 17 12 15 12"/><polygon points="21 28 23 28 23 12 21 12"/></g>",
              }
            }
            onClick={null}
            style={
              {
                "fill": "currentColor",
                "height": "15px",
                "width": "auto",
              }
            }
            viewBox="0 0 36 36"
            xmlns="http://www.w3.org/2000/svg"
          />
          Delete
        </div>
      </div>
    </div>
  </td>
</tr>
`;

exports[`UsersControlpanelGroups > renders a UsersControlpanelGroups component with no Manager user 1`] = `
<tr
  className=""
>
  <td
    className=""
  >
    Administrators
  </td>
  <td
    className=""
  >
    <div
      className="ui fitted checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <input
        checked={false}
        className="hidden"
        disabled={false}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value="Administrators.Member"
      />
      <label />
    </div>
  </td>
  <td
    className=""
  >
    <div
      className="ui fitted checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <input
        checked={false}
        className="hidden"
        disabled={false}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value="Administrators.Reader"
      />
      <label />
    </div>
  </td>
  <td
    className=""
  >
    <div
      className="ui checked disabled fitted checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <input
        checked={true}
        className="hidden"
        disabled={true}
        readOnly={true}
        tabIndex={-1}
        type="checkbox"
        value="Administrators.Manager"
      />
      <label />
    </div>
  </td>
  <td
    className="right aligned"
  />
</tr>
`;
